# jumpcut

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: launch.json
src/jumpcut/: __init__.py  analyze.py  captions.py  cli.py  ffbin.py  ingest.py  models.py  pipeline.py  render.py  transcribe.py  web.py
src/jumpcut/static/: index.html
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.js
webapp/src/: app.js  pipeline.js
